# stereo-camera-calibration

./: .gitignore  CMakeLists.txt  README.md  calibrate_stereo.cpp  calibrate_stereo.h  main.cpp
calib_data/20220125_2cm/matlab_algo/result/: calibrationSession.mat  estimationErrors.mat  script.m  stereoParams.mat
calib_data/20220125_2cm/opencv_algo/raw/: stereo_calib.xml
calib_data/20220125_2cm/opencv_algo/result/: extrinsics.yml  intrinsics.yml
calib_data/20220125_3cm/matlab_algo/result/: calibrationSession.mat  estimationErrors.mat  stereoParams.mat
calib_data/20220125_3cm/opencv_algo/raw/: stereo_calib.xml
calib_data/20220125_3cm/opencv_algo/result/: extrinsics.yml  intrinsics.yml
calib_data/20220208_4cm/opencv_algo/raw/: stereo_calib.xml
calib_data/20220208_4cm/opencv_algo/result/: extrinsics.yml  intrinsics.yml
calib_data/20220215_dataset/3cm/raw/: stereo_calib.xml
calib_data/20220215_dataset/3cm/result/: extrinsics.yml  intrinsics.yml
calib_data/20220215_dataset/4cm/: stereo_calib.xml
calib_data/20220215_dataset/4cm/result/: extrinsics.yml  intrinsics.yml
calib_data/20220215_dataset/5cm/raw/: stereo_calib.xml
calib_data/20220215_dataset/5cm/result/: extrinsics.yml  intrinsics.yml
calib_data/20220215_dataset/5cm_w_light/raw/: stereo_calib.xml
calib_data/20220215_dataset/5cm_w_light/result/: extrinsics.yml  intrinsics.yml
dataset/20220512/raw/: stereo_calib.xml
dataset/20220512/result/: extrinsics.yml  intrinsics.yml
hpps/: calibrate_stereo.h  stereo_processing.h
src/: calibrate_stereo.cpp  main.cpp  stereo_processing.cpp
(+28 files in other folders)
